sdm845-common: overlay: Disable AnimateScreenLights
For this particular device, EGL seems it's a dead case. Disable it till smth comes up.

E libEGL  : eglCreateWindowSurfaceTmpl:718 error 300b (EGL_BAD_NATIVE_WINDOW)
E libEGL  : eglDestroySurfaceImpl:900 error 300d (EGL_BAD_SURFACE)
E ColorFade: eglDestroySurface failed: error 12301
E ColorFade: java.lang.Throwable
E ColorFade: 	at com.android.server.display.ColorFade.logEglError(ColorFade.java:691)
E ColorFade: 	at com.android.server.display.ColorFade.destroyEglSurface(ColorFade.java:627)
E ColorFade: 	at com.android.server.display.ColorFade.dismissResources(ColorFade.java:334)
E ColorFade: 	at com.android.server.display.DisplayPowerState.dismissColorFadeResources(DisplayPowerState.java:216)
E ColorFade: 	at com.android.server.display.DisplayPowerController.animateScreenStateChange(DisplayPowerController.java:1516)
E ColorFade: 	at com.android.server.display.DisplayPowerController.updatePowerState(DisplayPowerController.java:897)
E ColorFade: 	at com.android.server.display.DisplayPowerController.access$800(DisplayPowerController.java:90)
E ColorFade: 	at com.android.server.display.DisplayPowerController$DisplayControllerHandler.handleMessage(DisplayPowerController.java:1940)
E ColorFade: 	at android.os.Handler.dispatchMessage(Handler.java:107)
E ColorFade: 	at android.os.Looper.loop(Looper.java:214)
E ColorFade: 	at android.os.HandlerThread.run(HandlerThread.java:67)
E ColorFade: 	at com.android.server.ServiceThread.run(ServiceThread.java:44)

Signed-off-by: Joey Huab <joey@evolution-x.org>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -304,4 +304,6 @@
         <item>0:2:15</item>
     </string-array>
 
+    <!-- If this is true, the screen will fade off. -->
+    <bool name="config_animateScreenLights">false</bool>
 </resources>
