--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -24,6 +24,16 @@
             android:key="dc"
             android:summary="@string/dc_mode_summary"
             android:title="@string/dc_mode_title" />
+
+        <Preference
+            android:key="panel_category"
+            android:title="@string/panel_category_title"
+            android:summary="@string/panel_category_summary"
+            android:persistent="false" >
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="org.lineageos.device.DeviceSettings"
+                    android:targetClass="org.lineageos.device.DeviceSettings.PanelSettingsActivity" />
+        </Preference>
     </PreferenceCategory>
 
     <PreferenceCategory
