sdm845-common: DeviceSettings: Show a warning about vibration strength
This commit has two benefits:
 * Helps us avoid users from complaining incase anything goes wrong with their hardware
 * Having the vibration slider as the last option meant that when trying to move the slider
   you ended up triggering the Q gesture to switch apps, this helps avoid that

Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/DeviceSettings/res/xml/main.xml
+++ b/DeviceSettings/res/xml/main.xml
@@ -129,5 +129,10 @@
             android:icon="@drawable/ic_vibration_icon"
             android:title="@string/vib_notif_strength_title_head"
             android:summary="@string/vib_notif_strength_summary_head" />
+          
+        <Preference
+            android:icon="@drawable/ic_info_outline_24dp"
+            android:persistent="false"
+            android:summary="@string/vibration_warning" />
     </PreferenceCategory>
 </PreferenceScreen>
