--- a/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
+++ b/overlay-evolution/frameworks/base/core/res/res/values/evolution_config.xml
@@ -42,4 +42,9 @@
 
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">false</bool>
+
+    <!-- Adaptive Charging sysfs node & value for suspend/resume charging-->
+    <string name="config_adaptiveChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
+    <string name="config_adaptiveChargingSupspendValue" translatable="false">1</string>
+    <string name="config_adaptiveChargingResumeValue" translatable="false">0</string>
 </resources>
